--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -26,4 +26,4 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Git diffs again master
-      run: git log master.. --pretty=oneline
+      run: git log master..
