--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -25,5 +25,9 @@ jobs:
       run: echo Hello, world!
 
     # Runs a set of commands using the runners shell
+    - name: Git branches
+      run: git branch
+      
+    # Runs a set of commands using the runners shell
     - name: Git diffs again master
-      run: git log origin/master.. --pretty=oneline
+      run: git log origin/master --pretty=oneline
