--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -23,7 +23,11 @@ jobs:
     # Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo Hello, world!
-
+      
+    # git fetch
+    - name: Git fetch
+      run: git fetch --prune --unshallow
+      
     # Runs a set of commands using the runners shell
     - name: Git branches
       run: git branch
