--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -29,9 +29,5 @@ jobs:
       run: git fetch --prune --unshallow
       
     # Runs a set of commands using the runners shell
-    - name: Git branches
-      run: git branch
-      
-    # Runs a set of commands using the runners shell
     - name: Git diffs again master
-      run: git log origin/master --pretty=oneline
+      run: git log origin/master.. --pretty=oneline
