--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -35,3 +35,9 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Git diffs again master
       run: git log origin/master.. --pretty=oneline
+      
+    - name: List s3 test
+      env: 
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: aws s3 ls
