--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -35,12 +35,9 @@ jobs:
     # Runs a set of commands using the runners shell
     - name: Git diffs again master
       run: git log origin/master.. --pretty=oneline
-
-    - name: Decrypt large secret
-      run: echo ${{ secrets.AWS_ACCESS_KEY_ID }}
       
     - name: List s3 test
       env: 
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: aws s3 ls
+      run: aws configure list
