--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -25,16 +25,16 @@ jobs:
       uses: chrislennon/action-aws-cli@1.1
 
     # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
+    - name: Welcome
+      run: echo Welcome to the auto-version-doc prototipe!
       
     # git fetch
     - name: Git fetch
       run: git fetch --prune --unshallow
       
     # Runs a set of commands using the runners shell
-    - name: Git diffs again master
-      run: git log origin/master.. --pretty=oneline
+    - name: Git diffs to master and save
+      run: git log origin/master.. --pretty=oneline > gitlog.txt
       
     - name: List s3 test
       env: 
