--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -23,13 +23,17 @@ jobs:
     # Install aws cli
     - name: AWS cli install action
       uses: chrislennon/action-aws-cli@1.1
-  
+
+    - name: Create dir
+      run: mkdir upload
+      
+    - name: Install s3 upload
     - uses: shallwefootball/s3-upload-action@master
       with:
           aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: '.'
+          source_dir: 'upload'
 
     # Runs a single command using the runners shell
     - name: Welcome
