--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -28,7 +28,7 @@ jobs:
       run: mkdir upload
       
     - name: Install s3 upload
-    - uses: shallwefootball/s3-upload-action@master
+      uses: shallwefootball/s3-upload-action@master
       with:
           aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
