--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -45,7 +45,7 @@ jobs:
       
     # Runs a set of commands using the runners shell
     - name: Git diffs to master and save
-      run: git log origin/master.. --pretty=oneline > gitlog.txt
+      run: git log origin/master.. --pretty=oneline > upload/gitlog.txt
       
     - name: List s3 test
       env: 
