--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -52,15 +52,15 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ secrets.ACCESS_KEY_2 }}
+        aws-secret-access-key: ${{ secrets.SECRET_KEY_2 }}
         aws-region: us-east-1
     
     - name: s3
 #      env:
 #          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
 #          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-      run: aws s3 sync ./upload s3://balde-temporal/test
+      run: aws s3 sync ./upload s3://balde-prueba/test
       
 #    - name: List s3 test
 #      env: 
