--- a/.github/workflows/devdiffs.yml
+++ b/.github/workflows/devdiffs.yml
@@ -36,15 +36,6 @@ jobs:
     - name: Git diffs to master and save
       run: git log origin/master.. --pretty=oneline > upload/gitlog.txt
 
-    # S3 Uploade 
-#    - name: Install s3 upload
-#      uses: shallwefootball/s3-upload-action@master
-#      with:
-#          aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-#          aws_bucket: ${{ secrets.AWS_BUCKET }}
-#          source_dir: 'upload'
-
     # Install aws cli
     - name: AWS cli install action
       uses: chrislennon/action-aws-cli@1.1  
@@ -56,14 +47,5 @@ jobs:
         aws-secret-access-key: ${{ secrets.SECRET_KEY_2 }}
         aws-region: us-east-1
     
-    - name: s3
-#      env:
-#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-      run: aws s3 sync ./upload s3://balde-prueba/test
-      
-#    - name: List s3 test
-#      env: 
-#        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#      run: aws configure list
+    - name: upload git output to s3
+      run: aws s3 sync ./upload s3://release-train/mobile
