--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -25,13 +25,16 @@ jobs:
     # Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo Hello, world!
+      env: 
+        RELEASE_BRANCH: Relle
+      
+    - name: echo
+      run: echo $RELEASE_BRANCH
 
     # Runs a set of commands using the runners shell
     - name: Create new branch
       run: git checkout -b $RELEASE_BRANCH
-      env: 
-        RELEASE_BRANCH: Relle
-    
+      
     # Runs a set of commands using the runners shell
     - name: Push
       run: git push origin $RELEASE_BRANCH
