--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -10,6 +10,7 @@ on:
   pull_request:
     branches: [ master ]
 
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -27,6 +28,9 @@ jobs:
       run: echo Hello, world!
       env: 
         RELEASE_BRANCH: Relle
+    
+    - name: date echo
+      run: echo "$(date)" 
       
     - name: echo
       run: echo $RELEASE_BRANCH
