--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -22,15 +22,13 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+      
+    - name: Ekw
+      run: "::set-env name=RELEASE_BRANCH::Blabla"
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo Hello, world!
-      env: 
-        RELEASE_BRANCH: Relle
-    
-    - name: date echo
-      run: echo "$(date)" 
       
     - name: echo
       run: echo $RELEASE_BRANCH
