--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -31,7 +31,7 @@ jobs:
       run: echo Hello, world!
       
     - name: echo
-      run: echo $RELEASE_BRANCH
+      run: echo release$GITHUB_RUN_NUMBER
 
     # Runs a set of commands using the runners shell
     - name: Create new branch
